--- a/Final Project/HBCmanage/form_customers.fxml
+++ b/Final Project/HBCmanage/form_customers.fxml
@@ -1,24 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HBCmanage.controller_customers">
     <children>
         <VBox prefHeight="400.0" prefWidth="750.0">
             <children>
-                <VBox prefHeight="50.0" prefWidth="750.0" />
+                <VBox prefHeight="50.0" prefWidth="750.0">
+               <children>
+                  <Label alignment="CENTER" prefHeight="50.0" prefWidth="1200.0" text="Customers">
+                     <font>
+                        <Font name="Centaur" size="48.0" />
+                     </font>
+                  </Label>
+               </children></VBox>
                 <HBox prefHeight="350.0" prefWidth="750.0">
                     <children>
                         <HBox prefHeight="350.0" prefWidth="600.0">
                             <children>
                                 <VBox prefHeight="350.0" prefWidth="600.0">
                                     <children>
-                                        <VBox prefHeight="50.0" prefWidth="1000.0" />
+                              <HBox prefHeight="50.0" prefWidth="1000.0">
+                                 <children>
+                                    <JFXButton fx:id="btn_customers_add" mnemonicParsing="false" onAction="#btn_customers_add_action" prefHeight="50.0" prefWidth="250.0" text="Add New">
+                                       <font>
+                                          <Font name="Centaur" size="18.0" />
+                                       </font>
+                                    </JFXButton>
+                                    <JFXButton fx:id="btn_customers_edit" mnemonicParsing="false" onAction="#btn_customers_edit_action" prefHeight="50.0" prefWidth="250.0" text="Edit">
+                                       <font>
+                                          <Font name="Centaur" size="18.0" />
+                                       </font>
+                                    </JFXButton>
+                                    <JFXButton fx:id="btn_customers_delete" mnemonicParsing="false" onAction="#btn_customers_delete_action" prefHeight="50.0" prefWidth="250.0" text="Delete">
+                                       <font>
+                                          <Font name="Centaur" size="18.0" />
+                                       </font>
+                                    </JFXButton>
+                                    <JFXButton fx:id="btn_customers_refresh" mnemonicParsing="false" onAction="#btn_customers_refresh_action" prefHeight="50.0" prefWidth="250.0" text="Refresh List">
+                                       <font>
+                                          <Font name="Centaur" size="18.0" />
+                                       </font>
+                                    </JFXButton>
+                                 </children>
+                              </HBox>
                                         <VBox prefHeight="300.0" prefWidth="600.0">
                                             <children>
                                                 <TableView fx:id="customer_list" prefHeight="300.0" prefWidth="600.0">
@@ -56,7 +91,83 @@
                                 </VBox>
                             </children>
                         </HBox>
-                        <HBox prefHeight="350.0" prefWidth="150.0" />
+                        <HBox prefHeight="350.0" prefWidth="150.0">
+                     <children>
+                        <VBox prefHeight="550.0" prefWidth="200.0">
+                           <children>
+                              <VBox prefHeight="455.0" prefWidth="200.0">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="50.0" prefWidth="200.0" text="FILTERS" textAlignment="CENTER" underline="true">
+                                       <font>
+                                          <Font name="Centaur" size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <VBox prefHeight="75.0" prefWidth="200.0">
+                                       <children>
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="First Name" textAlignment="CENTER">
+                                             <font>
+                                                <Font name="Centaur" size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <JFXTextField fx:id="filter_fname" prefHeight="30.0">
+                                             <VBox.margin>
+                                                <Insets left="5.0" right="5.0" />
+                                             </VBox.margin>
+                                          </JFXTextField>
+                                       </children>
+                                    </VBox>
+                                    <VBox prefHeight="75.0" prefWidth="200.0">
+                                       <children>
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Lasts Name" textAlignment="CENTER">
+                                             <font>
+                                                <Font name="Centaur" size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <JFXTextField fx:id="filter_lname" prefHeight="30.0">
+                                             <VBox.margin>
+                                                <Insets left="5.0" right="5.0" />
+                                             </VBox.margin>
+                                          </JFXTextField>
+                                       </children>
+                                    </VBox>
+                                    <VBox prefHeight="100.0" prefWidth="200.0">
+                                       <children>
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Email" textAlignment="CENTER">
+                                             <font>
+                                                <Font name="Centaur" size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <JFXTextField fx:id="filter_email" prefHeight="30.0">
+                                             <VBox.margin>
+                                                <Insets left="5.0" right="5.0" />
+                                             </VBox.margin>
+                                          </JFXTextField>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="95.0" prefWidth="200.0">
+                                 <children>
+                                    <JFXButton fx:id="btn_customers_apply" mnemonicParsing="false" onAction="#updateDatatable" prefHeight="35.0" prefWidth="200.0" text="Apply Filters">
+                                       <font>
+                                          <Font name="Centaur" size="14.0" />
+                                       </font>
+                                    </JFXButton>
+                                    <JFXButton fx:id="btn_customers_clear" mnemonicParsing="false" onAction="#clearFilters" prefHeight="35.0" prefWidth="200.0" text="Clear Filters">
+                                       <font>
+                                          <Font name="Centaur" size="14.0" />
+                                       </font>
+                                    </JFXButton>
+                                    <JFXButton fx:id="btn_customers_exit" mnemonicParsing="false" onAction="#btn_customers_exit_action" prefHeight="35.0" prefWidth="200.0" text="Exit">
+                                       <font>
+                                          <Font name="Centaur" size="14.0" />
+                                       </font>
+                                    </JFXButton>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </children></HBox>
                     </children>
                 </HBox>
             </children>
