--- a/Final Project/HBCmanage/form_inventory_edit.fxml
+++ b/Final Project/HBCmanage/form_inventory_edit.fxml
@@ -23,7 +23,7 @@
                         </VBox>
                         <VBox fillWidth="false" prefHeight="30.0" prefWidth="200.0">
                             <children>
-                                <JFXTextField fx:id="text_inventory_add_pn" prefHeight="35.0" prefWidth="195.0" />
+                                <JFXTextField fx:id="text_inventory_edit_pn" prefHeight="35.0" prefWidth="195.0" />
                             </children></VBox>
                     </children>
                 </HBox>
@@ -36,7 +36,7 @@
                         </VBox>
                         <VBox fillWidth="false" prefHeight="28.0" prefWidth="200.0">
                             <children>
-                                <JFXTextArea fx:id="text_inventory_add_description" prefHeight="75.0" prefWidth="195.0" wrapText="true" />
+                                <JFXTextArea fx:id="text_inventory_edit_description" prefHeight="75.0" prefWidth="195.0" wrapText="true" />
                             </children></VBox>
                     </children>
                 </HBox>
@@ -49,7 +49,7 @@
                         </VBox>
                         <VBox fillWidth="false" prefHeight="29.0" prefWidth="202.0">
                             <children>
-                                <JFXTextField fx:id="text_inventory_add_price" prefHeight="35.0" prefWidth="195.0" />
+                                <JFXTextField fx:id="text_inventory_edit_price" prefHeight="35.0" prefWidth="195.0" />
                             </children></VBox>
                     </children>
                 </HBox>
@@ -62,7 +62,7 @@
                         </VBox>
                         <VBox fillWidth="false">
                             <children>
-                                <JFXTextField fx:id="text_inventory_add_cost" prefHeight="35.0" prefWidth="195.0" />
+                                <JFXTextField fx:id="text_inventory_edit_cost" prefHeight="35.0" prefWidth="195.0" />
                             </children></VBox>
                     </children>
                 </HBox>
@@ -75,7 +75,7 @@
                         </VBox>
                         <VBox fillWidth="false">
                             <children>
-                                <JFXComboBox fx:id="combo_inventory_add_type" prefHeight="35.0" prefWidth="195.0" />
+                                <JFXComboBox fx:id="combo_inventory_edit_type" prefHeight="35.0" prefWidth="195.0" />
                             </children></VBox>
                     </children>
                 </HBox>
@@ -88,7 +88,7 @@
                         </VBox>
                         <VBox fillWidth="false" prefHeight="40.0" prefWidth="200.0">
                             <children>
-                                <JFXTextField fx:id="text_inventory_add_qty" prefHeight="35.0" prefWidth="195.0" />
+                                <JFXTextField fx:id="text_inventory_edit_qty" prefHeight="35.0" prefWidth="195.0" />
                             </children>
                         </VBox>
                     </children>
@@ -110,4 +110,3 @@
         </VBox>
     </children>
 </AnchorPane>
-
