--- a/Final Project/HBCmanage/form_orders.fxml
+++ b/Final Project/HBCmanage/form_orders.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
@@ -185,16 +186,16 @@
                                     </VBox>
                                     <VBox prefHeight="75.0" prefWidth="200.0">
                                        <children>
-                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Date Created" textAlignment="CENTER">
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Status" textAlignment="CENTER">
                                              <font>
                                                 <Font name="Centaur" size="14.0" />
                                              </font>
                                           </Label>
-                                          <JFXTextField fx:id="filter_orders_date" prefHeight="30.0">
+                                          <JFXComboBox fx:id="filter_orders_status" prefHeight="30.0" prefWidth="200.0">
                                              <VBox.margin>
                                                 <Insets left="5.0" right="5.0" />
                                              </VBox.margin>
-                                          </JFXTextField>
+                                          </JFXComboBox>
                                        </children>
                                     </VBox>
                                             </children>
