--- a/Final Project/HBCmanage/form_customers.fxml
+++ b/Final Project/HBCmanage/form_customers.fxml
@@ -63,22 +63,17 @@
                                                                 <PropertyValueFactory property="Customer_ID" />
                                                             </cellValueFactory>
                                                         </TableColumn>
-                                                        <TableColumn fx:id="col_2" prefWidth="150" text="First Name">
+                                                        <TableColumn fx:id="col_2" prefWidth="250.0" text="Name">
                                                             <cellValueFactory>
                                                                 <PropertyValueFactory property="Customer_FirstName" />
                                                             </cellValueFactory>
                                                         </TableColumn>
-                                                        <TableColumn fx:id="col_3" prefWidth="150" text="Last Name">
-                                                            <cellValueFactory>
-                                                                <PropertyValueFactory property="Customer_LastName" />
-                                                            </cellValueFactory>
-                                                        </TableColumn>
-                                                        <TableColumn fx:id="col_4" prefWidth="100" text="Phone">
+                                                        <TableColumn fx:id="col_3" prefWidth="100" text="Phone">
                                                             <cellValueFactory>
                                                                 <PropertyValueFactory property="Customer_PhoneNumber" />
                                                             </cellValueFactory>
                                                         </TableColumn>
-                                                        <TableColumn fx:id="col_5" prefWidth="150" text="Email">
+                                                        <TableColumn fx:id="col_4" prefWidth="200.0" text="Email">
                                                             <cellValueFactory>
                                                                 <PropertyValueFactory property="Customer_EmailAddress" />
                                                             </cellValueFactory>
@@ -104,12 +99,12 @@
                                     </Label>
                                     <VBox prefHeight="75.0" prefWidth="200.0">
                                        <children>
-                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="First Name" textAlignment="CENTER">
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Name" textAlignment="CENTER">
                                              <font>
                                                 <Font name="Centaur" size="14.0" />
                                              </font>
                                           </Label>
-                                          <JFXTextField fx:id="filter_fname" prefHeight="30.0">
+                                          <JFXTextField fx:id="filter_name" prefHeight="30.0">
                                              <VBox.margin>
                                                 <Insets left="5.0" right="5.0" />
                                              </VBox.margin>
@@ -118,12 +113,12 @@
                                     </VBox>
                                     <VBox prefHeight="75.0" prefWidth="200.0">
                                        <children>
-                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Lasts Name" textAlignment="CENTER">
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Phone" textAlignment="CENTER">
                                              <font>
                                                 <Font name="Centaur" size="14.0" />
                                              </font>
                                           </Label>
-                                          <JFXTextField fx:id="filter_lname" prefHeight="30.0">
+                                          <JFXTextField fx:id="filter_phone" prefHeight="30.0">
                                              <VBox.margin>
                                                 <Insets left="5.0" right="5.0" />
                                              </VBox.margin>
