--- a/Final Project/HBCmanage/form_customers_add.fxml
+++ b/Final Project/HBCmanage/form_customers_add.fxml
@@ -8,70 +8,57 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="280.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HBCmanage.controller_customers_add">
+<AnchorPane prefHeight="220.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HBCmanage.controller_customers_add">
     <children>
-        <VBox prefHeight="280.0" prefWidth="300.0">
+        <VBox prefHeight="220.0" prefWidth="300.0">
             <children>
-                <HBox layoutX="10.0" layoutY="138.0" prefHeight="40.0" prefWidth="300.0" />
+                <HBox layoutX="10.0" layoutY="138.0" prefHeight="20.0" prefWidth="300.0" />
                 <HBox prefHeight="40.0" prefWidth="300.0">
                     <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                            <children>
-                                <Label alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="100.0" text="First Name:" />
-                            </children>
-                        </VBox>
-                        <VBox fillWidth="false" prefHeight="30.0" prefWidth="200.0">
-                            <children>
-                                <JFXTextField fx:id="add_fname_text" prefHeight="35.0" prefWidth="195.0" />
-                            </children></VBox>
+                          <Label alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Name: ">
+                     <font>
+                        <Font name="Centaur" size="18.0" />
+                     </font>
+                  </Label>
+                          <JFXTextField fx:id="add_name_text" prefHeight="35.0" prefWidth="195.0" />
                     </children>
                 </HBox>
-                <HBox layoutX="10.0" layoutY="10.0" prefHeight="80.0" prefWidth="300.0">
+                <HBox layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="300.0">
                     <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                                <Label alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Last Name:" />
-                                <Label alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Phone:">
-                           <font>
-                              <Font name="Candara" size="15.0" />
-                           </font></Label>
-                     </children>
-                        </VBox>
-                        <VBox fillWidth="false" prefHeight="28.0" prefWidth="200.0">
-                     <children>
-                                <JFXTextField fx:id="add_lname_text" prefHeight="35.0" prefWidth="195.0" />
-                                <JFXTextField fx:id="add_phone_text" prefHeight="35.0" prefWidth="195.0" />
-                     </children></VBox>
+                          <Label alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Phone: ">
+                     <font>
+                        <Font name="Centaur" size="18.0" />
+                     </font>
+                  </Label>
+                          <JFXTextField fx:id="add_phone_text" prefHeight="35.0" prefWidth="195.0" />
                     </children>
                 </HBox>
                 <HBox layoutX="10.0" layoutY="42.0" prefHeight="40.0" prefWidth="300.0">
                     <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                                <Label alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Email:" />
-                     </children>
-                        </VBox>
-                        <VBox fillWidth="false" prefHeight="29.0" prefWidth="202.0">
-                     <children>
-                                <JFXTextField fx:id="add_email_text" prefHeight="35.0" prefWidth="195.0" />
-                     </children></VBox>
+                          <Label alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Email: ">
+                     <font>
+                        <Font name="Centaur" size="18.0" />
+                     </font>
+                  </Label>
+                          <JFXTextField fx:id="add_email_text" prefHeight="35.0" prefWidth="195.0" />
                     </children>
                 </HBox>
-                <HBox layoutX="10.0" layoutY="74.0" prefHeight="40.0" prefWidth="300.0">
-                    <children>
-                        <VBox prefHeight="29.0" prefWidth="100.0" />
-                        <VBox fillWidth="false" />
-                    </children>
-                </HBox>
+                <HBox layoutX="10.0" layoutY="74.0" prefHeight="40.0" prefWidth="300.0" />
                 <HBox layoutX="10.0" layoutY="138.0" prefHeight="40.0" prefWidth="300.0">
                     <children>
                         <VBox prefHeight="200.0" prefWidth="150.0">
                      <children>
-                                <JFXButton fx:id="btn_customers_save" mnemonicParsing="false" onAction="#submit_click" prefHeight="40.0" prefWidth="200.0" text="SAVE" />
+                                <JFXButton fx:id="btn_customers_save" mnemonicParsing="false" onAction="#submit_click" prefHeight="40.0" prefWidth="200.0" text="SAVE">
+                           <font>
+                              <Font name="Centaur" size="18.0" />
+                           </font></JFXButton>
                      </children></VBox>
                         <VBox prefHeight="200.0" prefWidth="150.0">
                      <children>
-                                <JFXButton fx:id="btn_customers_cancel" mnemonicParsing="false" onAction="#btn_cancel_action" prefHeight="40.0" prefWidth="148.0" text="CANCEL" />
+                                <JFXButton fx:id="btn_customers_cancel" mnemonicParsing="false" onAction="#btn_cancel_action" prefHeight="40.0" prefWidth="148.0" text="CANCEL">
+                           <font>
+                              <Font name="Centaur" size="18.0" />
+                           </font></JFXButton>
                      </children></VBox>
                     </children>
                 </HBox>
