add inventory edit screen changed core functions
major update

--- a/Final Project/HBCmanage/form_mainapp.fxml
+++ b/Final Project/HBCmanage/form_mainapp.fxml
@@ -10,7 +10,6 @@
    <children>
       <VBox prefHeight="400.0" prefWidth="600.0">
          <children>
-            <VBox minHeight="-Infinity" prefHeight="50.0" prefWidth="600.0" />
             <VBox minHeight="-Infinity" prefHeight="300.0" prefWidth="600.0">
                <children>
                   <HBox prefHeight="300.0" prefWidth="600.0">
@@ -57,7 +56,14 @@
                      </children>
                   </HBox>
                </children></VBox>
-            <VBox prefHeight="50.0" prefWidth="600.0" />
+            <VBox prefHeight="100.0" prefWidth="600.0">
+               <children>
+                  <JFXButton fx:id="btn_exit" mnemonicParsing="false" onAction="#btn_exit_action" prefHeight="100.0" prefWidth="600.0" text="EXIT">
+                     <font>
+                        <Font name="Centaur" size="48.0" />
+                     </font>
+                  </JFXButton>
+               </children></VBox>
          </children>
       </VBox>
    </children>
